Agrega funcionalidades al módulo de médico